# omarchy-doctor

./: Cargo.toml  LICENSE  README.md  create-release.sh  install.sh
aur/omadoctor-bin/: .SRCINFO  PKGBUILD
fixes/: 00_steam.toml  01_video.toml  02_graphics.toml  03_audio.toml  04_display.toml
src/: detector.rs  engine.rs  fixer.rs  github.rs  issue.rs  main.rs  ui.rs
