[package]
name = "omadoctor"
version = "0.1.0"
edition = "2021"
description = "Diagnose and fix common Omarchy Linux issues"
license = "MIT"
repository = "https://github.com/ZeroiJ/omarchy-doctor.git"

[[bin]]
name = "omadoctor"
path = "src/main.rs"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
zip = "2"
flate2 = "1"
